<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGray"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/first_card"
        android:elevation="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/md_white_1000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/asap"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="35sp" />

            <RelativeLayout
                android:id="@+id/infButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple"
                android:orientation="vertical">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/info_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iiv_icon="faw-info-circle"
                    app:iiv_size="24dp"
                    app:iiv_color="@color/primary"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/info_icon"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/asap"
                    android:gravity="center_vertical"
                    android:text="@string/version"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@id/textView5"
                    android:layout_toEndOf="@id/info_icon"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/asap"
                    android:textSize="12sp"
                    android:text="@string/app_version" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/changelogButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/infButton"
                android:layout_marginTop="10dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iiv_icon="faw-history"
                    app:iiv_size="24dp"
                    app:iiv_color="@color/primary"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/changelog_text"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/source_code_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/changelogButton"
                android:layout_marginTop="10dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iiv_icon="faw-telegram"
                    app:iiv_size="24dp"
                    app:iiv_color="@color/primary"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/textView7"
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/links"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/first_card"
        android:layout_gravity="center_horizontal"
        android:elevation="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/md_white_1000">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/donation_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iiv_icon="faw-newspaper"
                    app:iiv_size="24dp"
                    app:iiv_color="@color/primary"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/about"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutus_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/donation_button"
                android:layout_marginTop="10dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iiv_icon="faw-user-alt"
                    app:iiv_size="24dp"
                    app:iiv_color="@color/primary"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/about_us"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>