<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blueGray"
    android:orientation="vertical"
    tools:context=".SocialActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/blackpearl_imageview"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/blackpearl_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/asap"
                    android:text="@string/app_name"
                    android:textColor="@color/primary"
                    android:textSize="35sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/blackpearl_support_tg_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/blackpearl_support_tg_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-telegram"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/bp_chat_group"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blackpearl_channel_tg_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/blackpearl_channel_tg_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-telegram"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/bp_channel"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/killswitch_imageview"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/hamza" />

                <TextView
                    android:id="@+id/killswitch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/asap"
                    android:text="@string/kill_switch"
                    android:textColor="@color/primary"
                    android:textSize="35sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/killswitch_tg_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/killswitch_tg_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-telegram"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/telegram"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/killswitch_ig_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/killswitch_ig_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-instagram"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/ig"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/killswitch_pp_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/killswitch_pp_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-paypal"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/donate"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/angelo_imageview"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/angelo_icon" />

                <TextView
                    android:id="@+id/angelo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/asap"
                    android:text="@string/yahia_angelo"
                    android:textColor="@color/primary"
                    android:textSize="35sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/angelo_tg_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/angelo_tg_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-telegram"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/telegram"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/angelo_github_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/angelo_github_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-github"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/github"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/angelo_pp_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/angelo_pp_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:iiv_color="@color/primary"
                    app:iiv_icon="faw-paypal"
                    app:iiv_size="24dp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/donate"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
    </ScrollView>